# qdisc-demo

./: go.mod  htb_bpfel_x86.go  main.go  pfifo_bpfel_x86.go  qdisc_bpfel_x86.go  test
bpf/: CMakeLists.txt  Makefile  common.h  custom.h  headers_update.sh  htb.c  pfifo.c  qdisc_full.c  vmlinux.h
